# mlx-coding-bench

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: deploy-site.yaml
measurements/llm_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-04-21__13:55:01/: settings.json
measurements/llm_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-04-21__14:11:33/: settings.json
measurements/llm_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-04-21__14:12:07/: settings.json
measurements/llm_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-04-21__14:50:58/: benchmark_results.csv  settings.json
measurements/llm_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-04-21__15:30:45/: benchmark_results.csv  settings.json
measurements/llm_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-06-14__15:03:44/: benchmark_results.csv  settings.json
measurements/llm_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-06-15__11:33:33/: benchmark_results.csv  settings.json
measurements/llm_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-06-15__22:38:26/: benchmark_results.csv  settings.json
measurements/llm_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-06-16__04:08:45/: benchmark_results.csv  settings.json
measurements/llm_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-06-29__22:21:57/: benchmark_results.csv  settings.json
measurements/llm_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-06-30__07:20:19/: benchmark_results.csv  settings.json
measurements/llm_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-07-01__12:47:59/: benchmark_results.csv  settings.json
measurements/llm_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-07-01__12:52:13/: benchmark_results.csv  settings.json
measurements/llm_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-07-01__12:59:11/: benchmark_results.csv  settings.json
measurements/llm_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-07-01__13:02:34/: benchmark_results.csv  settings.json
measurements/llm_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-07-01__13:16:03/: benchmark_results.csv  settings.json
measurements/llm_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-07-01__13:23:37/: benchmark_results.csv  settings.json
measurements/llm_benchmarks/Apple_M5_Max_XP+XE+40GPU_128GB/2026-06-15__23:25:26/: settings.json
measurements/llm_benchmarks/Apple_M5_Max_XP+XE+40GPU_128GB/2026-06-15__23:28:59/: benchmark_results.csv  settings.json
measurements/llm_benchmarks/Apple_M5_Max_XP+XE+40GPU_128GB/2026-06-17__16:44:24/: benchmark_results.csv  settings.json
measurements/quality_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-04-21__15:37:24/: quality_results.csv  settings.json
measurements/quality_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-04-21__15:59:26/: quality_results.csv  settings.json
measurements/quality_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-06-14__20:56:10/: quality_results.csv  settings.json
measurements/quality_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-06-15__11:44:31/: quality_results.csv  settings.json
measurements/quality_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-06-16__03:13:48/: quality_results.csv  settings.json
measurements/quality_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-06-16__09:00:03/: quality_results.csv  settings.json
measurements/quality_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-06-29__22:41:17/: quality_results.csv  settings.json
measurements/quality_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-06-30__07:29:45/: quality_results.csv  settings.json
measurements/quality_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-06-30__08:29:38/: quality_results.csv  settings.json
measurements/quality_benchmarks/Apple_M4_Pro_10P+4E+20GPU_64GB/2026-06-30__12:53:52/: quality_results.csv  settings.json
mtb/: prompts.py  select_benchmarks.py
mtb/llm_benchmarks/: __init__.py  base_llm_benchmark.py  mlx_llm_benchmark.py  run_llm_benchmark.py
mtb/llm_benchmarks/models/: base.py  gemma.py  gemma4.py  gpt_oss.py  lfm.py  llama.py  ornith.py  phi.py  qwen.py  qwen36.py  qwen3_coder.py
mtb/quality_benchmarks/: run_quality_benchmark.py  tool_call_parser.py  utils.py
mtb/system/: memory.py  software_info.py
scripts/: export_for_mlx_stack.py  generate_site.py  generate_social_preview.py  generate_tweet_charts.py  run_llm_benchmarks.py  run_quality_benchmarks.py  update_readme_table.py
tests/: test_select_benchmarks.py
(+16 files in other folders)
