[project]
name = "mtb"
version = "0.1.0"
readme = "README.md"
description = "Benchmarking neural network layers on MLX+Metal vs torch+MPS"
authors = [
    {name="Wes Eklund", email="s.wes35@gmail.com"},
    {name="Auke Wiggers", email="wiggers.auke@gmail.com"},
]
requires-python = "==3.11.11"

dependencies = [
    "accelerate >= 1.5.2",
    "anthropic >= 0.52.0",
    "fire >= 0.7.0",
    "ipython >= 9.2.0",
    "Jinja2 >= 3.1.6",
    "lmstudio == 1.3.0",
    "ollama == 0.4.8",
    "matplotlib >= 3.10.1",
    "memory-profiler >= 0.61.0",
    "mlx == 0.31.2",
    "mlx-lm @ git+https://github.com/ml-explore/mlx-lm.git",
    "natsort >= 8.4.0",
    "pandas >= 2.2.3",
    "plotly >= 6.0.1",
    "setuptools >= 78.1.0",
    "transformers >= 4.50.1",
    "torch == 2.6.0",
]

[dependency-groups]
dev = [
    "black >= 25.1.0",
    "pytest >= 8.3.5",
    "pytest-cov >= 6.1.0",
    "pytest-mock >= 3.14.0",
    "pytest-timeout >= 2.3.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["mtb"]
branch = true  

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration tests requiring real model weights (deselect with '-m \"not integration\"')",
]
