[project]
name = "mtb"
version = "0.1.0"
readme = "README.md"
description = "Speed + quality benchmarks for local LLMs on Apple Silicon"
authors = [
    {name="Wes Eklund", email="s.wes35@gmail.com"},
    {name="Auke Wiggers", email="wiggers.auke@gmail.com"},
]
requires-python = "==3.11.11"

dependencies = [
    "anthropic >= 0.52.0",
    "fire >= 0.7.0",
    "Jinja2 >= 3.1.6",
    "matplotlib >= 3.10.1",
    "mlx >= 0.31.2",
    "mlx-lm @ git+https://github.com/ml-explore/mlx-lm.git",
    "ollama == 0.4.8",
    "pandas >= 2.2.3",
    "plotly >= 6.0.1",
    "psutil >= 5.9.0",
    "transformers >= 4.50.1",
]

[project.optional-dependencies]
torch = ["torch >= 2.6.0"]
lmstudio = ["lmstudio == 1.3.0"]

[dependency-groups]
dev = [
    "black >= 25.1.0",
    "pytest >= 8.3.5",
    "pytest-cov >= 6.1.0",
    "pytest-mock >= 3.14.0",
    "pytest-timeout >= 2.3.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["mtb"]
branch = true  

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration tests requiring real model weights (deselect with '-m \"not integration\"')",
]
